--- a/PDFLucy/requirements.txt
+++ b/PDFLucy/requirements.txt
@@ -2,6 +2,7 @@ anthropic==0.25.6
 faiss-cpu==1.8.0
 google-generativeai==0.5.2
 langchain==0.1.16
+onnx==1.16.1
 openai==1.23.6
 pdf2image==1.17.0
 python-dotenv==1.0.1
